# Panguin-pikachu

./: .coderabbit.yaml  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  KNOWN_ISSUES.md  LICENSES.md  Makefile  PenguinDash.spec  Project_Proposal.md  README.md  README.txt  SETUP.md  SYSTEM_OVERVIEW.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  generate_report.js  generate_tiles.py  main.py  package-lock.json  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  resource_manifest.json  run.sh  style.kv
.claude/: launch.json
.github/: CODEOWNERS  pull_request_template.md
AI_context.md/: NSC2026-Penguin-Dash-GDD.md  Penguin-Dash-2Day-Sprint-Plan.md
assets/: CREDITS.md
core/: asset_contract.py  audio.py  boss_data.py  config.py  database.py  decision_log.py  events.py  how_to_play.py  i18n.py  interaction.py  items.py  junction_data.py  logger.py  messages.py  pause_state.py  replay.py  schema.py  session.py  shop_catalog.py  spawning.py  state.py  sync.py
debug/: screenshot_capture.py
docs/: ART_DIRECTION.md  BALANCE.md  ENGINEERING_PLAN.md  GAME_DESIGN.md  GAME_FIRST_PLAN.md  OVERVIEW.md  RELEASE_RUNBOOK.md  SPRINT_2DAY.md  TIMELINE.md  UI_REDESIGN_PLAN.md  UI_UX_HANDOFF.md  state-machines.md
game/: biome.py  blocks.py  buffs.py  chaser.py  controller.py  errors.py  event_manager.py  gem.py  grid.py  obstacle_factory.py  particles.py  penguin.py  pool.py  ports.py  quiz_manager.py
infrastructure/: __init__.py  atomic.py  audio.py  crash_report.py  (+9 more)
(+136 files in other folders)
