[project]
name = "penguin-dash"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# kivy.require() must run before the kivy.* imports it guards
"main.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
files = ["core", "server", "infrastructure"]
exclude = ["^server/migrations/"]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
